force-app/main/default/objects/sugati__Itinerary_Content__c/sugati__Itinerary_Content__c.object-meta.xml
<CustomObject>
    <description>Itinerary Content Library</description>
    <label>Content</label>
    <nameField>
        <displayFormat>IC-{0000000000}</displayFormat>
        <label>Itinerary Content ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>