force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_Booking_Type__c</fullName>
    <inlineHelpText>Which Booking Type is this Content for?</inlineHelpText>
    <label>Booking Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Tour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>