force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_Brand__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>sugati__Brand__c</referenceTo>
    <relationshipLabel>Contents</relationshipLabel>
    <relationshipName>Contents</relationshipName>
    <type>Lookup</type>
</CustomField>