force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_Category__c</fullName>
    <formula>sugati__IC_Itinerary_Content_Category__r.Name</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>