force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>sugati__Country__c</referenceTo>
    <relationshipName>Itinerary_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>