force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>