force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_FinalDoc__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_FinalDoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FinalDoc</label>
    <type>Checkbox</type>
</CustomField>