force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_Itinerary_Content_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_Itinerary_Content_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary Content Category</label>
    <referenceTo>sugati__Itinerary_Content_Category__c</referenceTo>
    <relationshipName>Itinerary_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>