force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_Letter_Intro_End__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_Letter_Intro_End__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter Intro End</label>
    <type>Checkbox</type>
</CustomField>