force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_New_Page__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_New_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Page</label>
    <type>Checkbox</type>
</CustomField>