force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_Page__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_Page__c</fullName>
    <label>Page</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>