force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mostly for Original Diving.</description>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipName>Itinerary_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>