force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>