force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_Title_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_Title_Color__c</fullName>
    <label>Title Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>