force-app/main/default/objects/sugati__Itinerary_Content__c/fields/sugati__IC_User__c.field-meta.xml
<CustomField>
    <fullName>sugati__IC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Itinerary_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>