force-app/main/default/objects/sugati__Itinerary_Content__c/recordTypes/sugati__TB.recordType-meta.xml
<RecordType>
    <fullName>sugati__TB</fullName>
    <active>true</active>
    <label>TB</label>
</RecordType>